# db2026

./: main.py  pyproject.toml
db_01_flet/: main.py  requirements.txt
db_02_duckdb/: README.md  main.py  pyproject.toml
db_02_duckdb/data/: assets.csv  finance.db
db_03_financedr/: README.md  main.py  pyproject.toml  requirements.txt
db_03_financedr/data/: finance.db  main.py
