[project]
name = "db-03-financedr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.3",
    "finance-datareader>=0.9.202",
    "flet>=0.85.2",
    "flet-charts>=0.85.2",
    "flet-datatable2>=0.85.2",
    "kaleido>=1.3.0",
    "pandas>=3.0.3",
    "plotly-express>=0.4.1",
]
